--- a/index.html
+++ b/index.html
@@ -5,88 +5,69 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>سایت موسیقی آریا 🎵</title>
+<link href="https://fonts.googleapis.com/css2?family=Vazir&display=swap" rel="stylesheet">
 <style>
 body {
     font-family: 'Vazir', Arial, sans-serif;
-    background: #0e0e0e;
+    background: linear-gradient(135deg,#1c1c1c,#4b0061);
     color: #fff;
-    margin: 0;
-    padding: 0;
+    margin:0; padding:0;
 }
 header {
-    background: linear-gradient(90deg, #ff005a, #7928ca);
-    text-align: center;
-    padding: 40px 20px;
+    text-align:center;
+    padding:50px 20px;
+    background: rgba(0,0,0,0.6);
+    backdrop-filter: blur(5px);
 }
 header h1 {
-    margin: 0;
-    font-size: 3em;
-    letter-spacing: 2px;
+    margin:0; font-size:3em; letter-spacing:2px; color:#ffdd00;
 }
-.song-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-}
-.song {
-    background: #1e1e1e;
-    border-radius: 15px;
-    margin: 15px;
-    padding: 20px;
-    width: 300px;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.6);
+header p {margin-top:10px; font-size:1.2em; color:#fff;}
+.container {display:flex; flex-wrap: wrap; justify-content: center; padding:20px; gap:20px;}
+.card {
+    background: rgba(30,30,30,0.85);
+    border-radius:20px;
+    width:300px;
+    padding:20px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.7);
     transition: transform 0.3s, box-shadow 0.3s;
 }
-.song:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 30px rgba(255,0,90,0.7);
+.card:hover {
+    transform: translateY(-10px);
+    box-shadow:0 15px 40px rgba(255,221,0,0.7);
 }
-.song h2 {
-    margin: 0;
-    font-size: 1.5em;
-    color: #ffdd00;
-}
-.song audio {
-    width: 100%;
-    margin-top: 10px;
-    outline: none;
-}
-a.download {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 8px 15px;
-    background: #ff005a;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 10px;
-    transition: background 0.3s;
-}
-a.download:hover {
-    background: #7928ca;
-}
-footer {
-    text-align: center;
-    padding: 20px;
-    background: #121212;
-    font-size: 0.9em;
-    color: #999;
-}
-@media(max-width: 700px){
-    .song {width: 90%;}
-}
+.card h2 {margin:0 0 10px 0; color:#ffdd00; display:flex; align-items:center;}
+.card h2::before {content:"🎵"; margin-right:8px;}
+.card audio {width:100%; outline:none; margin-bottom:10px;}
+a.download {display:block; margin-top:8px; padding:8px 12px; background:#ff005a; color:#fff; text-decoration:none; border-radius:12px; font-weight:bold; transition:0.3s;}
+a.download:hover {background:#7928ca; transform:scale(1.05);}
+footer {text-align:center; padding:20px; background: rgba(0,0,0,0.6); color:#ccc; font-size:0.9em;}
+#player-container {background: rgba(50,50,50,0.9); border-radius:20px; padding:20px; max-width:600px; margin:20px auto; box-shadow:0 10px 30px rgba(0,0,0,0.7);}
+select {width:100%; padding:10px; border-radius:10px; border:none; margin-bottom:15px; font-size:1em;}
+@media(max-width:700px){.container{flex-direction:column; align-items:center;} .card,#player-container{width:90%;}}
 </style>
 </head>
 <body>
 
 <header>
 <h1>سایت موسیقی آریا 🎵</h1>
-<p>تمام آهنگ‌ها را پخش و دانلود کنید!</p>
+<p>پخش حرفه‌ای و دانلود آسان آهنگ‌ها!</p>
 </header>
 
-<div class="song-list">
+<div id="player-container">
+<h2>پلیر مرکزی</h2>
+<select id="songSelect">
+<option value="music/02 Hamid Hiraad - Yadesh Be Kheyr.mp3">02 Hamid Hiraad - Yadesh Be Kheyr</option><option value="music/Ki - Migire Jato - 320.mp3">Ki - Migire Jato - 320</option>
+</select>
+<audio id="audioPlayer" controls>
+<source src="" type="audio/mpeg">
+مرورگر شما پشتیبانی نمی‌کند.
+</audio>
+</div>
 
-    <div class="song">
+<div class="container">
+
+    <div class="card">
         <h2>02 Hamid Hiraad - Yadesh Be Kheyr</h2>
         <audio controls>
             <source src="music/02 Hamid Hiraad - Yadesh Be Kheyr.mp3" type="audio/mpeg">
@@ -95,7 +76,7 @@ footer {
         <a class="download" href="music/02 Hamid Hiraad - Yadesh Be Kheyr.mp3" download>دانلود آهنگ</a>
     </div>
     
-    <div class="song">
+    <div class="card">
         <h2>Ki - Migire Jato - 320</h2>
         <audio controls>
             <source src="music/Ki - Migire Jato - 320.mp3" type="audio/mpeg">
@@ -105,6 +86,18 @@ footer {
     </div>
     
 </div>
+
+<script>
+const songSelect = document.getElementById('songSelect');
+const audioPlayer = document.getElementById('audioPlayer');
+songSelect.addEventListener('change', () => {
+    audioPlayer.src = songSelect.value;
+    audioPlayer.play();
+});
+if(songSelect.options.length > 0){
+    audioPlayer.src = songSelect.value;
+}
+</script>
 
 <footer>
 <p>© 2025 سایت موسیقی آریا - All Rights Reserved</p>
